Activida principal terminada, vinculada con otras actividades por botones

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/img_fondo"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_width="match_parent">
-
+    android:background="@drawable/fondo3"
+    android:orientation="horizontal">
+    <Button
+        android:id="@+id/btn_ajust"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@drawable/tuerca"
+        android:textStyle="bold"
+        android:theme="@style/MyButton"
+        />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""/>
+        android:background="@drawable/btn_pvp"
+        android:textStyle="bold"
+        android:theme="@style/MyButton"
+        android:visibility="invisible"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_pvp"
+            android:textStyle="bold"
+            android:theme="@style/MyButton"
+            android:visibility="invisible"/>
+    <Button
+        android:id="@+id/btn_pvp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/btn_pvp"
+        android:textStyle="bold"
+        android:theme="@style/MyButton" />
+    <Button
+        android:id="@+id/btn_pvia"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/btn_pvia"
+        android:textStyle="bold"
+        android:theme="@style/MyButton" />
+
+    </LinearLayout>
 </LinearLayout>
