--- a/app/src/main/res/layout/activity_act_pvp.xml
+++ b/app/src/main/res/layout/activity_act_pvp.xml
@@ -4,12 +4,41 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:orientation="vertical">
-
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/txtV_p1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Player1 : 0"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Player1 : 0"
+            android:visibility="invisible"/>
+        <TextView
+            android:id="@+id/txtV_p2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Player1 : 0"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <Button
-        android:id="@+id/btn_reset"
+        android:id="@+id/btn_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Back" />
+        <Button
+            android:id="@+id/btn_reset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="reset" />
+    </LinearLayout>
 
 
     <RelativeLayout
@@ -24,6 +53,7 @@
             android:background="@drawable/gatopvp" />
 
         <Button
+            android:id="@+id/btn_1"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_alignParentStart="true"
@@ -32,6 +62,7 @@
             android:layout_marginTop="24dp" />
 
         <Button
+            android:id="@+id/btn_2"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_alignParentStart="true"
@@ -40,12 +71,14 @@
             android:layout_marginTop="24dp" />
 
         <Button
+            android:id="@+id/btn_3"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_alignParentTop="true"
             android:layout_marginStart="210dp"
             android:layout_marginTop="24dp"/>
         <Button
+            android:id="@+id/btn_4"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_alignParentStart="true"
@@ -54,6 +87,7 @@
             android:layout_marginTop="180dp" />
 
         <Button
+            android:id="@+id/btn_5"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_alignParentStart="true"
@@ -62,12 +96,14 @@
             android:layout_marginTop="180dp" />
 
         <Button
+            android:id="@+id/btn_6"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_alignParentTop="true"
             android:layout_marginStart="210dp"
             android:layout_marginTop="180dp"/>
         <Button
+            android:id="@+id/btn_7"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_alignParentStart="true"
@@ -76,6 +112,7 @@
             android:layout_marginTop="320dp" />
 
         <Button
+            android:id="@+id/btn_8"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_alignParentStart="true"
@@ -84,6 +121,7 @@
             android:layout_marginTop="320dp" />
 
         <Button
+            android:id="@+id/btn_9"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_alignParentTop="true"
