--- a/app/src/main/res/layout/activity_act_pvp.xml
+++ b/app/src/main/res/layout/activity_act_pvp.xml
@@ -12,7 +12,8 @@
             android:id="@+id/txtV_p1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Player1 : 0"/>
+            android:text="Player1 : 0"
+            />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -59,7 +60,8 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="24dp" />
+            android:layout_marginTop="24dp"
+            android:background="@drawable/transparent" />
 
         <Button
             android:id="@+id/btn_01"
@@ -68,7 +70,8 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="108dp"
-            android:layout_marginTop="24dp" />
+            android:layout_marginTop="24dp"
+            android:background="@drawable/transparent"/>
 
         <Button
             android:id="@+id/btn_02"
@@ -76,7 +79,8 @@
             android:layout_height="80dp"
             android:layout_alignParentTop="true"
             android:layout_marginStart="210dp"
-            android:layout_marginTop="24dp"/>
+            android:layout_marginTop="24dp"
+            android:background="@drawable/transparent"/>
         <Button
             android:id="@+id/btn_10"
             android:layout_width="80dp"
@@ -84,7 +88,8 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="180dp" />
+            android:layout_marginTop="180dp"
+            android:background="@drawable/transparent"/>
 
         <Button
             android:id="@+id/btn_11"
@@ -93,7 +98,8 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="108dp"
-            android:layout_marginTop="180dp" />
+            android:layout_marginTop="180dp"
+            android:background="@drawable/transparent"/>
 
         <Button
             android:id="@+id/btn_12"
@@ -101,7 +107,8 @@
             android:layout_height="80dp"
             android:layout_alignParentTop="true"
             android:layout_marginStart="210dp"
-            android:layout_marginTop="180dp"/>
+            android:layout_marginTop="180dp"
+            android:background="@drawable/transparent"/>
         <Button
             android:id="@+id/btn_20"
             android:layout_width="80dp"
@@ -109,7 +116,8 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="15dp"
-            android:layout_marginTop="320dp" />
+            android:layout_marginTop="320dp"
+            android:background="@drawable/transparent"/>
 
         <Button
             android:id="@+id/btn_21"
@@ -118,7 +126,8 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="108dp"
-            android:layout_marginTop="320dp" />
+            android:layout_marginTop="320dp"
+            android:background="@drawable/transparent"/>
 
         <Button
             android:id="@+id/btn_22"
@@ -126,7 +135,8 @@
             android:layout_height="80dp"
             android:layout_alignParentTop="true"
             android:layout_marginStart="210dp"
-            android:layout_marginTop="320dp"/>
+            android:layout_marginTop="320dp"
+            android:background="@drawable/transparent"/>
     </RelativeLayout>
 
     </LinearLayout>
